# chess.com-api-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  testing.py
config/: auth.json  commands.json
pgn_folder/: winners_round_2.pgn
stockfish-3.28.0.dist-info/: RECORD
