[tool.poetry]
name = "chessdotcombot-Blue"
version = "0.1.0"
description = "A simple Chess.com bot for Discord."
authors = ["xyrenchess"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
